<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:iconTint="@color/colorAccent"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:iconTint="@color/colorAccent"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_recently_viewed"
            android:icon="@drawable/ic_baseline_remove_red_eye_24"
            android:iconTint="@color/colorAccent"
            android:title="@string/recently_viewed_notes" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_share"

                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:title="@string/send" />
            </group>
        </menu>
    </item>
</menu>